Revamp browser support

--- a/pwa/src/App.css
+++ b/pwa/src/App.css
@@ -31,6 +31,7 @@
   border-radius: 50%;
   position: absolute;
   bottom: 4%;
+  transition: all 0.3s;
 }
 
 .app-banner {
@@ -38,6 +39,7 @@
   font-size: 20px;
   position: absolute;
   top: 0%;
+  transition: all 0.3s ease-out;
 }
 
 .app-dictaphone {
